# se306-project-1

./: .gitignore  Makefile  README.md  build.sh  build_includeActors.py  build_updateActors.py  build_updateBuild.py  build_updateRun.py  debug.sh  debugconfig  demo.sh  find_debug.sh  jenkins_build.sh  jenkins_tests.sh  persist.sh  run.sh  runvis.sh  search.sh  test.sh  tests.sh  todos.sh
.AppleDouble/: .Parent  .catkin_workspace  .gitignore  README.md  build.sh  jenkins_build.sh  run.sh
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
doc/: brief_comments.txt
doc/.AppleDouble/: .Parent  00_Brief_Comments.md
minutes/: 20140725.md
se306_example/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  manifest.xml
se306_example/catkin_generated/: generate_cached_setup.py  ordered_paths.cmake  setup_cached.sh
se306_example/devel/: .catkin  .rosinstall  setup.sh
se306_p1_package/: CMakeLists.txt  manifest.xml
se306_p1_package/.AppleDouble/: .Parent  CMakeLists.txt  Makefile  manifest.xml
se306_p1_package/launch/: launch.launch
se306_p1_package/move_base_config/: costmap_common_params.yaml  global_costmap_params.yaml
se306_p1_package/msg/: Hunger.msg  Location.msg
src/: CMakeLists.txt
src/se306_p1_pkg/: CMakeLists.txt  package.xml
src/se306_p1_pkg/msg/: Arrive.msg
src/se306_p1_pkg/src/: .afpDeleted11271  Actor.cpp  Actor.h  ActorLocation.cpp  ActorLocation.h  ActorSpawner.cpp  ActorSpawner.h  Caregiver.cpp  Caregiver.h  Caregiver1.cpp  Caregiver1.h  Caregiver2.cpp  Caregiver2.h  Clock.cpp  Clock.h  CompanionRobot.cpp  CompanionRobot.h  CookingRobot.cpp  CookingRobot.h  Doctor.cpp  Doctor.h  Dog.cpp  Dog.h  EntertainmentRobot.cpp  EntertainmentRobot.h  Friend.cpp  Friend.h  GraphSearch.cpp  GraphSearch.h  Human.cpp  Human.h  MedicationRobot.cpp  MedicationRobot.h  Nurse.cpp  Nurse.h  PathPlanner.cpp  PathPlanner.h  PathPlannerListener.cpp  PathPlannerListener.h  PathPlannerNode.cpp  (+17 more)
src/se306_p1_pkg/src/keyinput/: KeyboardListener.cpp  KeyboardListener.hpp
src/se306_p1_pkg/test/: cargiver_tests.cpp  graph_search_test.cpp  messagingtests.cpp  messagingtests.cppNOTINCMAKELISTS  navigationtests.cpp  path_planner.cpp  path_planner_node.cpp  path_planner_node_test.cpp  path_planner_test.cpp  resident_test.cpp  robot_test.cpp  utest.cpp
src/se306_p1_pkg/world/: __autogen__donteditme__actorlist__  actorlist  myworld.world  updateactors.py
src/se306_p1_pkg/world/actors/: Caregiver  Clock  CompanionRobot  CookingRobot  Doctor  Dog  EntertainmentRobot  Friend  MedicationRobot  Nurse  R0  RCActor  Relative  Resident  default  totallyNotRelative
src/se306_p1_pkg/world/models/: basin  bedsidetable  bench_bathroom  bench_kitchen  bench_kitchen_corner  couch  fridge  oven  queenbed  queenbedused  shower  toilet  wardrobe
src/se306_p1_pkg/world/models/img/: README.txt
src/upstage_pkg/: CMakeLists.txt  package.xml
src/upstage_pkg/src/: Actor.cpp  Actor.hpp  Context.cpp  Context.hpp  Debug.hpp  KeyCodes.hpp  Keyboard.cpp  Keyboard.hpp  PointerUnique.hpp  ROSComm.cpp  ROSComm.hpp  Renderer.cpp  Renderer.hpp  Resource.cpp  Resource.hpp  ResourceLoader.cpp  ResourceLoader.hpp  ResourceManager.cpp  ResourceManager.hpp  StackAllocator.hpp  UpstageEnvironment.cpp  UpstageEnvironment.hpp  UpstageMain.cpp  Util.hpp  todo.txt
src/upstage_pkg/src/geom/: Mesh.hpp  Model.cpp  Model.hpp
src/upstage_pkg/src/maths/: Quaternion.cpp  Quaternion.hpp
src/upstage_pkg/src/renderer/: Font.cpp  Font.hpp  Image.cpp  Image.hpp  RenderTask.hpp  RenderTaskList.inc  Renderer.cpp  Renderer.hpp  Text.cpp  Text.hpp  Texture.cpp  Texture.hpp  Types.hpp  UltronScale.cpp  UltronScale.hpp
src/upstage_pkg/src/renderer/opengl/: glextLoaderGenerator.py  glloader.cpp  glloader.hpp  glx_define_list.txt
src/upstage_pkg/src/renderer/rendertasks/: RenderTaskClear.hpp  RenderTaskTestQuad.hpp  RenderTaskTexQuad.hpp  RenderTaskTextGlyph.hpp
src/upstage_pkg/src/rendertasks/: RenderTaskClear.hpp
src/upstage_pkg/src/resourceloaders/: ResourceLoaderBMP.cpp  ResourceLoaderFNT.cpp  ResourceLoaderGenericXML.cpp  ResourceLoaderStageWorld.cpp  ResourceLoaderTGA.cpp  ResourceLoaderUpstageEnv.cpp
src/upstage_pkg/src/rosworld/: Actor.cpp  ROSComm.cpp  ROSWorld.cpp  ROSWorld.hpp
src/upstage_pkg/src/xml/: XML.cpp  XML.hpp
upstage/: upstageenv.unv
week4/: index.html
(+115 files in other folders)
